# score_score-pyright

./: FEATURES.md  IMPLEMENTATION.md  LICENSE  README.md  SUMMARY.md  example.py  pyproject.toml
src/score_pyright/: __init__.py  __main__.py  cli.py  config.py  pyproject.toml
src/score_ruff/: __init__.py  cli.py  config.py  pyproject.toml
