[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "score-pyright"
version = "0.1.0"
description = "A wrapper around basedpyright with score-specific defaults"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "ETAS Contributors"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "basedpyright>=1.0.0",
    "tomli>=2.0.0; python_version<'3.11'",
]

[project.urls]
Homepage = "https://github.com/etas-contrib/score_score-pyright"
Repository = "https://github.com/etas-contrib/score_score-pyright"

[project.scripts]
score-pyright = "score_pyright.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/score_pyright"]
