[project]
name = "score-tooling"
version = "0.0.0"
description = "A collection of score specific tooling."
readme = "README.md"
# tomllib is in the standard library since Python 3.11
requires-python = ">=3.11"
authors = [
    {name = "Alexander Lanin"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "basedpyright",
    "ruff",
]

[project.urls]
Homepage = "https://github.com/etas-contrib/score_score-pyright"
Repository = "https://github.com/etas-contrib/score_score-pyright"

[project.scripts]
score-pyright = "score_pyright.cli:main"
score-ruff = "score_ruff.cli:main"

[tool.hatch.build.targets.wheel]
packages = [
    "src/score_pyright",
    "src/score_ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
